# wataboard

./: CMakeLists.txt  README.md  WataBoard.qml  WataButton.qml  WataButtonGroup.qml  main.cpp  main.qml  resources.qrc  sounds.json
android/: AndroidManifest.xml
data/: Tsunomaki Soundboard Timestamps - Sounds.csv  gen_soundboard.py
raw_data/: Tsunomaki Soundboard Timestamps - Sounds.csv  gen_soundboard.py
